# stuff

./: .travis.yml  CMakeLists.txt  README.md
coil/: CMakeLists.txt  makefile
coil/res/: 2  level2-wrong-board.html  level2.html  level_4  level_5  level_6  level_7  level_8
coil/res/levels/: 0  2  3
coil/res/solutions/: 0
coil/scripts/: coil.sh  htmlcxx.sh
coil/src/: board-tests.hpp  board.hpp  cmdline-parser-tests.hpp  cmdline-parser.hpp  coil.cpp  curl-tests.hpp  curl.hpp  downloader-tests.hpp  downloader.hpp  env.hpp  params.hpp  parser-tests.hpp  parser.hpp  solve-tests.hpp  solve.hpp  solver.hpp  tests.cpp  utils.hpp
thread-pool/: CMakeLists.txt
thread-pool/mk/: glog.cmake
thread-pool/mk/cmake-modules/: FindGLog.cmake
thread-pool/src/: main.cpp
triangle/: CMakeLists.txt
triangle/src/: triangle.cpp
